--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "edgardmessias/yii2-nprogress": "*",
         "hzhihua/yii2-dump": "~1.0",
-        "hzhihua/yii2-videojs-widget": "~1.0"
+        "hzhihua/yii2-videojs-widget": "~1.0",
+        "yiister/yii2-gentelella": "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
